// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup-component should override the top and left styles 1`] = `
<div
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#fff",
      "left": undefined,
      "top": undefined,
    }
  }
>
  <div>
    Some View
  </div>
</div>
`;

exports[`popup-component should render the component 1`] = `
<div
  className="my-class"
  onMouseUp={[Function]}
  style={
    Object {
      "left": undefined,
      "top": undefined,
    }
  }
>
  <div>
    Some View
  </div>
</div>
`;
